--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ yarn-error.log
 # System files
 **/.DS_Store
 **/Thumbs.db
+
+# Angular environment files
+IdentityAdminPortal/src/environments/environment.ts
