--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ yarn-error.log
 # Visual Studio Code
 **/.vscode/*
 !**/.vscode/settings.json
-!**/.vscode/tasks.json
-!**/.vscode/launch.json
+**/.vscode/tasks.json
+**/.vscode/launch.json
 !**/.vscode/extensions.json
 .history/*
 
